@@ -1,4 +1,4 @@
-This file is the README for BSD::Sysctl version 0.03
+This file is the README for BSD::Sysctl version 0.04
 
 INSTALLATION
 
